--- a/PPIU_Uni_WebDesign/feature.css
+++ b/PPIU_Uni_WebDesign/feature.css
@@ -4,28 +4,53 @@ body {
     margin: 0;
     width: 100%;  
     height: 100vh;
+}   
+
+
+.bg-body-tertiary {
+    background-color: brown !important;
 }
 
-header {
-    position: relative;
-    background-color: rgba(0, 0, 0, 0.505);
-    border: none;
+.offcanvas-start {
+    background-color: brown;
 }
 
-.nav-link, .fs-4 {
-    color: white !important;
+.navbar-toggler {
+    border: 2px solid rgba(0, 0, 0, 0.505);
+    background:none;
+    margin-left: 20px;
+    box-shadow: none !important;
 }
 
-#cover {
-    height: 80vh;
+.navbar-toggler:hover {
+    border-color: rgb(0, 0, 0);
+}
+
+.form-control {
+    background-color: gray;
+    border-color: gray;
+}
+
+#homePage {
+    width: 100%;
+    height: auto;
+}
+
+#homePage img {
+    width: 100%;
+    height: 70vh;
     object-fit: cover;
-    opacity: 0.9;
-    display: flex;
-    justify-content: center; /* This centers content horizontally within the flex container */
-    z-index: -1;
-    position: absolute;
-    top: 0;
-    left: 50%; /* Move left edge to center of screen */
-    transform: translateX(-50%); /* Shift back by half its width to center it */
-    width: 80%; /* Changed from 100% to 80% */
 }
+
+.btm-bar {
+    background-color: brown !important;
+}
+
+.btm-bar span {
+    width: 120px;
+    height: 40px;
+    align-content: center;
+    font-size: 0.9em;
+    margin: auto 0.5%;
+}
+
